# grilo-falante

./: .env.example  .gitignore  AES_ALIGNMENT_SUMMARY.md  ANALYSIS.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  SKILL.md  SPEC.md  USER_GUIDE.md  analyze_ambrosio.py  api.py  bitnet_server.py  chatgpt_action.yaml  chatgpt_instructions.md  docker-compose.yml  grilo_pipeline.py  install.sh  ledger.json  loader_kernel.py  opencode-start  pyproject.toml  run_inference_server.py  state_machine.py  test_ai_to_ai.py  test_article.md
.aes/: config.mk
aes/: kanban.md
app/: __init__.py
config/: ontologia.yaml
docker/: Dockerfile  Dockerfile.bitnet  Dockerfile.nginx  README.md  chat-wrapper.html  docker-compose.yml  nginx.conf  nginx.conf.bak  schema.sql  seed.sql
docs/: 00_INDICE.md  01-regime-analysis.md  02-comparison.md  03-requirements.md  04-future-roadmap.md  05-state-machine.md  06-unified-vision.md  07-boole-zeigarnik-analysis.md  08-boole-zeigarnik-implementation-plan.md  09-optimized-request.md  10-extras-concepts-integration.md  ANALISE_HOSTIL_COMPLETA.md  ANALISE_HOSTIL_IR_A_ESCOLA.md  ANALISE_HOSTIL_SC_V2.md  ANALYSIS.md  A_FAZER_MEMORIA_INSULAR.md  BIBLIOGRAPHY_AUDIT_PROTOCOL.md  CHECKLIST.md  DESIGN.md  DOCKER.md  HOSTILE_INSIGHTS.md  ILHA_VISION_v1.md  INSTALL.md  INTEGRACAO_COMPLETA.md  IR_A_ESCOLA_CONCEITO.md  PLAN_BACKOFFICE_v1.md  QUALITY_GATES.md  REQUIREMENTS.md  ROADMAP.md  SKILL.md  VISION.md  gf_scientific_compiler_v_2_spec.md  index.md
governance/: constraint_layer.py  falsifiability_lint.py  loop_closure.py  (+1 more)
(+391 files in other folders)
